--- a/LightBnB_WebApp/public/styles/main.css
+++ b/LightBnB_WebApp/public/styles/main.css
@@ -26,6 +26,11 @@
       height: 100%;
       padding: 0; }
 
+.property-listing__details {
+  padding-right: 5px;
+  margin-right: 3px;
+}
+
 @media screen and (max-width: 400px) {
   .property-listing {
     flex-direction: column;
